Authorized projects views
Commented out registration views and actions
Updated home view

--- a/Timesheet/Views/Account/Login.cshtml
+++ b/Timesheet/Views/Account/Login.cshtml
@@ -41,17 +41,17 @@
                         <input type="submit" value="Log in" class="btn btn-default" />
                     </div>
                 </div>
-                <p>
+                @*<p>
                     @Html.ActionLink("Register", "Register") if you don't have a local account.
-                </p>
+                </p>*@
             }
         </section>
     </div>
-    <div class="col-md-4">
+    @*<div class="col-md-4">
         <section id="socialLoginForm">
             @Html.Partial("_ExternalLoginsListPartial", new { Action = "ExternalLogin", ReturnUrl = ViewBag.ReturnUrl })
         </section>
-    </div>
+    </div>*@
 </div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
