--- a/Timesheet/Views/Projects/Index.cshtml
+++ b/Timesheet/Views/Projects/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Timesheet.Models.Project>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "My Projects";
 }
 
-<h2>Index</h2>
+<h2>My Projects</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
