--- a/Timesheet/Views/Shared/_Layout.cshtml
+++ b/Timesheet/Views/Shared/_Layout.cshtml
@@ -23,7 +23,12 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("My Projects", "Index", "Projects")</li>
+                    
+                    @if (Request.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("My Projects", "Index", "Projects")</li>
+                    }
+                    
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
