--- a/Timesheet/Views/Projects/Details.cshtml
+++ b/Timesheet/Views/Projects/Details.cshtml
@@ -65,6 +65,9 @@
                 @Html.DisplayNameFor(model => model.Tasks.First().To)
             </th>
             <th>
+                Hours
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Tasks.First().Summary)
             </th>
             <th>
@@ -81,6 +84,12 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.To)
+                </td>
+                <td>
+                    @{
+            var hours = item.To - item.From;
+                    }
+                    <div>@hours</div>
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Summary)
