--- a/Timesheet/Views/WorkItems/Create.cshtml
+++ b/Timesheet/Views/WorkItems/Create.cshtml
@@ -27,7 +27,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.To, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.To)
+                @Html.EditorFor(model => model.To, new { @data_provide = "datepicker" })
                 @Html.ValidationMessageFor(model => model.To)
             </div>
         </div>
@@ -64,4 +64,18 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jqueryui")
+    <script type="text/javascript">
+        $(function () {
+            $('#From').datetimepicker({
+                controlType: 'select',
+                timeFormat: 'hh:mm tt'
+            });
+
+            $('#To').datetimepicker({
+                controlType: 'select',
+                timeFormat: 'hh:mm tt'
+            });
+        })
+    </script>
 }
